--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "aos": "^2.3.4",
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
